# personal-stock-arm

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  设计范式与需求.md
.claude/: settings.json
alembic/: env.py
alembic/versions/: 766c657a5db8_初始迁移_scheduler_state表.py  f35b7fc8e3b8_添加watchlist_group和analysis_record表.py
deploy/: stock-arm.service
docs/: deployment-and-usage-guide.md  todo-and-improvements.md
docs/architecture/: module-layers.md  tech-stack.md
docs/paradigm/: agent-roles.md  quality-gates.md  sprint-workflow.md
docs/requirements/: core-features.md  data-sources.md  deployment.md  llm-integration.md  notification.md  skills-integration.md
docs/standards/: api-design.md  coding.md  config-security.md  frontend.md  testing.md
prompts/: stock_analysis.j2
scripts/: install-hooks.sh  validate_paradigm.py
scripts/hooks/: commit-msg  pre-commit
skills/: registry.yaml
specs/analysis/: llm-integration.md  llm-integration.sprint-1.md  skills-adapter.md  skills-adapter.sprint-1.md  technical-analysis.md  technical-analysis.sprint-1.md
specs/api/: fastapi-backend.md  fastapi-backend.sprint-1.md
specs/business/: earnings-processing.md  earnings-processing.sprint-1.md  international-briefing.md  international-briefing.sprint-1.md  macro-tracking.md  macro-tracking.sprint-1.md  research-reports.md  research-reports.sprint-1.md  watchlist-analysis.md  watchlist-analysis.sprint-1.md
specs/data/: ashare-fetcher.md  ashare-fetcher.qa-1.md  (+7 more)
tests/: conftest.py
(+119 files in other folders)
